--- a/posts/src/main.css
+++ b/posts/src/main.css
@@ -2,3 +2,14 @@ body {
   background: #202020;
   color: white;
 }
+
+h3 {
+  color: black;
+}
+/* New updates things in css */
+
+h3 {
+  color: black;
+}
+
+
